# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")

## Install netmanager_base.para to /system/etc/param/netmanager_base.para
## Install netmanager_base.para.dac to /system/etc/param/netmanager_base.para.dac

group("param_files") {
  deps = [
    ":netmanager_base.para",
    ":netmanager_base.para.dac",
  ]
}

ohos_prebuilt_etc("netmanager_base.para") {
  source = "netmanager_base.para"
  part_name = "netmanager_base"
  subsystem_name = "communication"
  module_install_dir = "etc/param"
}

ohos_prebuilt_etc("netmanager_base.para.dac") {
  source = "netmanager_base.para.dac"
  part_name = "netmanager_base"
  subsystem_name = "communication"
  module_install_dir = "etc/param"
}
