# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/communication/netmanager_base/netmanager_base_config.gni")

ohos_shared_library("fwmark_client") {
  sources = [
    "src/fwmark_client.cpp",
    "src/netsys_sock_client.cpp",
  ]

  include_dirs = [
    "$INNERKITS_ROOT/netmanagernative/include",
    "$INNERKITS_ROOT/include",
    "include",
    "$NETMANAGER_BASE_ROOT/utils/log/include",
    "//third_party/musl/porting/linux/user/src/hook",
  ]

  external_deps = [ "c_utils:utils" ]

  defines = [
    "NETMGR_LOG_TAG = \"NetsysFwmark\"",
    "LOG_DOMAIN = 0xD0015B0",
  ]

  if (enable_netmgr_debug) {
    defines += [ "NETMGR_DEBUG" ]
  }

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  part_name = "netmanager_base"
  subsystem_name = "communication"
}
